[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Animation/Hunter/image (1).png" type="Texture" id=2]
[ext_resource path="res://SFX/hitHurt.mp3" type="AudioStream" id=3]
[ext_resource path="res://Animation/Hunter/dutch_01.png" type="Texture" id=4]
[ext_resource path="res://Animation/Hunter/dutch_idle.png" type="Texture" id=5]
[ext_resource path="res://Animation/Hunter/dutch_gun.png" type="Texture" id=6]
[ext_resource path="res://Animation/Dog/dug.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 68.0294

[sub_resource type="Animation" id=4]
resource_name = "Dug"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Move"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Shoot"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ) ]
}

[node name="Enemy" type="KinematicBody2D" groups=["Enemies"]]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -23, -35, 7, -50, 29, -36, 31, 41, -28, 40 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )

[node name="ShotDir" type="Position2D" parent="."]

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="FX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dug = SubResource( 4 )
anims/Move = SubResource( 2 )
anims/Shoot = SubResource( 3 )

[node name="Gun" type="Sprite" parent="."]
position = Vector2( 2, 3.5 )
scale = Vector2( 0.212245, 0.246753 )
texture = ExtResource( 6 )
flip_h = true

[connection signal="body_entered" from="Range" to="." method="range_enter"]
[connection signal="body_exited" from="Range" to="." method="range_exit"]
[connection signal="timeout" from="StunTimer" to="." method="timeout"]
